<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.HabitUpdate">

    <data>
        <variable
            name="habitViewModel"
            type="com.example.android.habittracker.habitlist.viewmodel.HabitListViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/my_black">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/my_black">

            <EditText
                android:id="@+id/update_text_view_name"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/round_button_info"
                android:padding="16dp"
                android:hint="@string/name"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:importantForAutofill="no"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/update_text_view_info"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/round_button_info"
                android:hint="@string/information"
                android:padding="16dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/update_text_view_name"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/update_text_view_name"
                android:importantForAutofill="no"
                tools:ignore="TextFields" />


            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="32dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@id/update_button_save_date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/update_text_view_info">

                <RadioButton
                    android:id="@+id/button_easy_update"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:text="@string/easy"
                    android:textColor="#FFEB3B" />

                <RadioButton
                    android:id="@+id/button_hard_update"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:text="@string/hard"
                    android:textColor="#FFEB3B" />
            </RadioGroup>

            <Button
                android:id="@+id/update_button_save_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/round_button"
                android:text="@string/choose_date"
                android:textColor="#FFEB3B"
                app:backgroundTint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/radio_group"
                app:layout_constraintBottom_toTopOf="@id/update_text_view_date"/>

            <TextView
                android:id="@+id/update_text_view_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/round_button_info"
                android:padding="16dp"
                android:text="@string/date"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/update_text_view_name"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/update_button_save_date" />

            <Button
                android:id="@+id/update_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="128dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/round_button_info"
                android:text="@string/update"
                android:textColor="#FFEB3B"
                app:backgroundTint="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/update_text_view_date" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>